second change Producer IP

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,5 @@ eclipse.preferences.version=1
 encoding//src/cloudy/spout/OrderBaseSpout.java=UTF-8
 encoding//src/com/ibf/base/spout/SourceSpout.java=UTF-8
 encoding//src/kafka/examples/Consumer.java=UTF-8
+encoding//src/user_visit/DeepVisitBolt.java=UTF-8
+encoding//src/user_visit/UVSumBolt.java=UTF-8
